
 - Allow same OID elements in RDNs
 - Support for all DirectoryStrings
 - New accessor method: organizationName 

1.2 2015-11-13

 - Add generic method extensionValue
 - Ommit unknown or damaged extensions

1.3 2015-11-17

 - Experimental Perl features removed
 - Refactored building process

1.4_01 2016-01-14

- Find PEM anywhere
- Support repeated attributes
- Various crashes, internal optimizations
- More OIDs
- Access methods: subject, subjectAltName, extensions
- Generate access methods for unknown OIDs in DNs at runtime
- Add extractCSR method to get CSR in binary or PEM
- subjectPublicKey option to extract in PEM format
- Convert IP addresses to strings
- Convert basicConstraints to string
- Add registerOID to allow extraction of simple custom OIDs
- More tests
- Improve documentation
- Add setAPIversion, regularize OID names in V1
- For API V1, attributes method returns names or values of attributes (except extensions)
- Improve build: Use Dist::Zilla, autogenerate README,LICENE,META,Makefile.PL
- Generate & ship Commitlog from git

1.4_02

- For API V1, omit space in key usage list
- Look for policy identifier names in all tables
- Decode certificatePolicyIdentifier, add related OIDs
- Avoid building un-necessary ASN.1 parsers
- Fully decode ApplicationCertPolicies for API V1
- Check enhanced key usage before registering OID
- Add name2oid to API
- Internal cleanup  & error reporting improvements

1.4_03

- certificateTemplate ASN correction: MajorVersion is optional
- certificateTemplate return id as a name if OID registered (API V1)
- handle some malformed requests better
- decode more M$ attributes, correct some.
- Don't croak() on missing attributes
- Convert BMPStrings from UCS2 to Perl (printable) strings
- Rework special OID handling to be scalable & cover attributes
- Don't croak in new.  (API V1) Always return undef.  Class method error() returns detail.
- Return reasonable strings from attributes('name') and extensionValue('name',1)